<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:fitsSystemWindows="true" 
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:minHeight="@dimen/actionbar_height"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/caption"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/action_close"
            android:layout_width="48dp"
            android:layout_height="48dp" 
            android:layout_alignParentLeft="true">
            
            <ImageView
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/actionbar_close"/>
                
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/relativeLayout1"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:singleLine="true"
        android:text="@string/notice_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:maxLines="2"
        android:text="@string/notice_one" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView3"
        android:text="@string/notice_two" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:maxLines="3"
        android:text="@string/notice_three" />

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_guide"/>
    
    </RelativeLayout>


