<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <RelativeLayout
       android:id="@+id/tab_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/bpm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/time"/>


        <RelativeLayout
            android:layout_width="@dimen/date_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/date_margin_left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:textColor="#000000"
                android:text="@string/date"/>
        </RelativeLayout>   
    </RelativeLayout>
    
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/padding_start"
        android:layout_marginEnd="@dimen/padding_end"
        android:background="@color/main_header_separator_color"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/padding_start"
        android:layout_marginEnd="@dimen/padding_end">
        
        <ListView
            android:id="@+id/heart_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:listSelector="@android:color/transparent" 
            android:descendantFocusability="beforeDescendants"
            android:divider="@null"
            android:dividerHeight="0dip" 
            android:scrollbars="none"/>
            
        <TextView
            android:id="@+id/heart_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/no_history_values"
            android:textColor="#ff000000"
            android:paddingBottom="100dp"/>
    </FrameLayout>
            
</LinearLayout>
